Fixed card width issue on mobile

--- a/reactjs_api_call/src/components/Card/Card.css
+++ b/reactjs_api_call/src/components/Card/Card.css
@@ -30,6 +30,15 @@ li{
 
 @media screen and (max-width: 480px) {
     .card{
-        min-width: 80vw;
+        min-width: 75vw;
+    }
+
+    .card:hover{
+        border-radius: 0;
+        border: 1px solid rgb(29, 101, 173);
+        font-size: 0.9rem;
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        min-width: 83vw;
     }
   }
